--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -16,6 +16,7 @@ process {
     // Call the variants before imputation
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:.*' {
         publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:GAWK' {
@@ -35,29 +36,32 @@ process {
             "-C alleles"
         ].join(' ')
         ext.prefix = { "${meta.id}" }
+        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MERGE' {
         ext.args = [
             "--write-index=tbi",
         ].join(' ')
-        ext.prefix = { "${meta.id}" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}" }
+        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}.annotate" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}.annotate" }
+        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
     }
 
     // Impute the variants
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [ enabled: false ]
-        tag = {"${meta.id} ${meta.chr}"}
+        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
         ext.args   = ["--impute-reference-only-variants"].join(' ')
-        ext.prefix = { "${meta.id}_${meta.chunk.replace(':','_')}_phase" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chunk.replace(':','_')}_phase" }
         ext.suffix = "bcf"
         publishDir = [ enabled: false ]
     }
@@ -68,7 +72,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
-        ext.prefix = { "${meta.id}_${meta.chr}_ligate" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_ligate" }
         publishDir = [ enabled: false ]
     }
 
@@ -88,6 +92,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}.glimpse1" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}.glimpse1" }
     }
 }
