--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -17,19 +17,19 @@ process {
             path: { "${params.outdir}/imputation/quilt/" },
             mode: params.publish_dir_mode,
         ]
-        tag = {"${meta.id} ${meta.chr}"}
+        tag = {"Batch ${meta.batch} ${meta.chr}"}
     }
 
     // Impute quilt
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:QUILT_QUILT' {
-        ext.prefix = { "${meta.id}_${meta.chr}_${meta.chunk}.impute" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_${meta.chunk}.impute" }
         publishDir = [enabled: false]
     }
 
     // Annotate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
         ext.args     = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_${meta.chr}_${meta.chunk}.impute.annotate" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_${meta.chunk}.impute.annotate" }
         publishDir = [ enabled: false ]
     }
 
@@ -44,6 +44,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_CONCAT' {
         ext.args = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}.quilt" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}.quilt" }
     }
 }
