--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -11,20 +11,21 @@
 */
 
 process {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:.*' {
+        publishDir = [enabled: false]
+        tag = {"Batch ${meta.batch} ${meta.chr}"}
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:GAWK' {
         ext.args2  = "'BEGIN { OFS=\"\\t\" } NR>1  { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3, \$4 }'" // Remove duplicates
-        ext.prefix = { "${meta.id}_${meta.chr}_posfile_stitch" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_posfile_stitch" }
         ext.suffix = "txt"
         publishDir = [enabled: false]
         tag = {"${meta.id} ${meta.chr}"}
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:.*' {
-        publishDir = [enabled: false]
-    }
-
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
-        ext.prefix = { "${meta.id}.stitch" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}.stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
@@ -43,5 +44,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}_batch${meta.batch}.stitch" }
     }
 }
