--- a/conf/modules.config
+++ b/conf/modules.config
@@ -74,6 +74,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:LIST_TO_FILE' {
+        tag = { "${meta.id}" }
         ext.prefix = { "${meta.id}.${meta.batch}" }
         publishDir = [
             path: { "${params.outdir}/imputation/batch" },
