--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -36,7 +36,7 @@ process {
             "-C alleles"
         ].join(' ')
         ext.prefix = { "${meta.id}" }
-        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MERGE' {
@@ -50,13 +50,13 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_batch${meta.batch}.annotate" }
-        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     // Impute the variants
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
         publishDir = [ enabled: false ]
-        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
+        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
