Order files before grouping and split output vcf

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -84,4 +84,16 @@ process {
         ]
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
+        tag = { "${meta.id} Batch ${meta.batch}" }
+        ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}_${meta.batch}" }
+        publishDir = [
+            path: { "${params.outdir}/imputation/${meta.tools}/" },
+            mode: params.publish_dir_mode,
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
 }
