--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -36,21 +36,18 @@ process {
             "-C alleles"
         ].join(' ')
         ext.prefix = { "${meta.id}" }
-        tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MERGE' {
         ext.args = [
             "--write-index=tbi",
         ].join(' ')
-        ext.prefix = { "${meta.id}_batch${meta.batch}" }
-        tag = {"${meta.id} ${meta.batch} ${meta.chr}"}
+        ext.prefix = { "${meta.id}.merge" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_batch${meta.batch}.annotate" }
-        tag = {"${meta.id} ${meta.chr}"}
+        ext.prefix = { "${meta.id}.annotate" }
     }
 
     // Impute the variants
