Add splitting by samples for each output

--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -91,4 +91,18 @@ process {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_batch${meta.batch}.glimpse1" }
     }
+
+    // Split by samples
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_GLIMPSE1:.*' {
+        publishDir = [
+            path: { "${params.outdir}/imputation/glimpse1/samples" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_GLIMPSE1:BCFTOOLS_PLUGINSPLIT' {
+        ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}_batch${meta.batch}.glimpse1" }
+    }
 }
