--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -46,4 +46,18 @@ process {
         ext.args = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_batch${meta.batch}.quilt" }
     }
+
+    // Split by samples
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_QUILT:.*' {
+        publishDir = [
+            path: { "${params.outdir}/imputation/quilt/samples" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_QUILT:BCFTOOLS_PLUGINSPLIT' {
+        ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}_batch${meta.batch}.quilt" }
+    }
 }
