--- a/conf/modules.config
+++ b/conf/modules.config
@@ -84,8 +84,9 @@ process {
         ]
     }
 
+    // Split by samples for each tool
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
-        tag = { "${meta.id} Batch ${meta.batch}" }
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_${meta.batch}" }
         publishDir = [
