Put in samples folder

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -90,7 +90,7 @@ process {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_${meta.batch}" }
         publishDir = [
-            path: { "${params.outdir}/imputation/${meta.tools}/" },
+            path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
             mode: params.publish_dir_mode,
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
