Add batch support (#135)
* Remove phase autodetect

* Aggregate glimpse1 bams, merge vcf

* Aggregate glimpse and quilt bams

* Add to conf

* Add fasta to quilt and keep vcf merged

* Add modules list_to_file

* Order called sample

* Take out GL computation from swf glimpse1

* Add bamlist to quilt and glimpse2

* Put stitch parameters preparation in stitch sbwf

* Add batch_size and group samples in main workflow

* Update config

* Update config

* Add validation of batch size and tools compatibility

* Update test workflow

* Add batch to metamap

* Update conf

* Fix bam regions map

* Use dot as separator

* Update test and Changelog

* Update docs

* Improve documentation

* Patch modified modules

* Order samples names in snaphot

* Update changelog

* Improve pipeline

* Order files before grouping and split output vcf

* Add validation to snapshot

* Update schema description

* Fix tags

* Add splitting by samples for each output

* Split validation truth set by sample

* Fix split

* Put in samples folder

---------

Co-authored-by: LouisLeNezet <louislenezet@gmaio.com>

--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -14,12 +14,12 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE2:.*' {
         publishDir = [ enabled: false ]
-        tag = {"${meta.id} ${meta.chr}"}
+        tag = {"Batch ${meta.batch} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
-        ext.prefix   = { "${meta.id}_${meta.chunk.replace(':','_')}_glimpse2" }
-        ext.args     = {"--keep-monomorphic-ref-sites --ind-name ${meta.id}"}
+        ext.prefix   = { "${meta.id}_batch${meta.batch}_${meta.chunk.replace(':','_')}_glimpse2" }
+        ext.args     = { "--keep-monomorphic-ref-sites" }
         ext.suffix   = "bcf"
         publishDir   = [ enabled: false ]
     }
@@ -30,7 +30,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE2:GLIMPSE2_LIGATE' {
-        ext.prefix = { "${meta.id}_${meta.chr}_ligate" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_ligate" }
         publishDir = [ enabled: false ]
     }
 
@@ -51,6 +51,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE2:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}.glimpse2" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}.glimpse2" }
     }
 }
