--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -38,6 +38,13 @@ process {
         ext.prefix = { "${meta.id}_truth.call" }
     }
 
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MERGE' {
+        ext.args = [
+            "--write-index=tbi",
+        ].join(' ')
+        ext.prefix = { "${meta.id}" }
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}.annotate" }
@@ -55,6 +62,21 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
+    }
+
+    // Split by samples
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:.*' {
+        publishDir = [
+            path: { "${params.outdir}/validation/samples" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
+        ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}" }
+        ext.suffix = ".truth"
     }
 
     // Validation subworkflow
