--- a/conf/modules.config
+++ b/conf/modules.config
@@ -61,6 +61,7 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
+
     // IMPUTE
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BCFTOOLS_STATS_TOOLS' {
         ext.prefix = { "${meta.id}.${meta.tools}" }
@@ -71,4 +72,29 @@ process {
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:LIST_TO_FILE' {
+        tag = { "${meta.id}" }
+        ext.prefix = { "${meta.id}.${meta.batch}" }
+        publishDir = [
+            path: { "${params.outdir}/imputation/batch" },
+            mode: params.publish_dir_mode,
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    // Split by samples for each tool
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}_${meta.batch}" }
+        publishDir = [
+            path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
+            mode: params.publish_dir_mode,
+            enabled: true,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
 }
