--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -13,24 +13,19 @@
 process {
     // Configuration for the glimpse1 imputation subworkflow
 
-    // Impute with GLIMPSE1
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:.*' {
+    // Call the variants before imputation
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:.*' {
         publishDir = [ enabled: false ]
         tag = {"${meta.id} ${meta.chr}"}
     }
 
-    // Call the variants before imputation
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:.*' {
-        publishDir = [ enabled: false ]
-    }
-
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:GAWK' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:GAWK' {
         ext.args2  = "'NR>1 { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3 \",\" \$4 }'"
         ext.prefix = { "${meta.id}" }
         ext.suffix = "tsv"
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_MPILEUP' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MPILEUP' {
         ext.args = [
             "-I",
             "-E",
@@ -43,30 +38,42 @@ process {
         ext.prefix = { "${meta.id}" }
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BAM_GL_BCFTOOLS:BCFTOOLS_ANNOTATE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_MERGE' {
+        ext.args = [
+            "--write-index=tbi",
+        ].join(' ')
+        ext.prefix = { "${meta.id}.merge" }
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_GLIMPSE1:BCFTOOLS_ANNOTATE' {
         ext.args   = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}.annotate" }
     }
 
     // Impute the variants
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:.*' {
+        publishDir = [ enabled: false ]
+        tag = {"${meta.id} ${meta.chr}"}
+    }
+
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_PHASE' {
         ext.args   = ["--impute-reference-only-variants"].join(' ')
-        ext.prefix = { "${meta.id}_${meta.chunk.replace(':','_')}_phase" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chunk.replace(':','_')}_phase" }
         ext.suffix = "bcf"
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_1' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_1' {
         ext.args   = "--csi"
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
-        ext.prefix = { "${meta.id}_${meta.chr}_ligate" }
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:GLIMPSE_LIGATE' {
+        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_ligate" }
         publishDir = [ enabled: false ]
     }
 
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_IMPUTE_GLIMPSE1:BCFTOOLS_INDEX_2' {
         ext.args   = "--tbi"
         publishDir = [ enabled: false ]
     }
@@ -82,6 +89,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}.glimpse1" }
+        ext.prefix = { "${meta.id}_batch${meta.batch}.glimpse1" }
     }
 }
