--- a/nextflow.config
+++ b/nextflow.config
@@ -52,6 +52,9 @@ params {
     min_val_gl                  = 0.9
     min_val_dp                  = 5
 
+    // Imputation
+    batch_size                 = 100
+
     // QUILT
     ngen                       = 100
     buffer                     = 10000
@@ -205,8 +208,8 @@ profiles {
     test_stitch         { includeConfig 'conf/test_stitch.config'       }
     test_glimpse2       { includeConfig 'conf/test_glimpse2.config'     }
     test_panelprep      { includeConfig 'conf/test_panelprep.config'    }
-    test_dog            { includeConfig 'conf/test_dog.config'}
-
+    test_dog            { includeConfig 'conf/test_dog.config'          }
+    test_batch          { includeConfig 'conf/test_batch.config'        }
 }
 
 // Load nf-core custom profiles from different Institutions
