--- a/tests/config/nf-test.config
+++ b/tests/config/nf-test.config
@@ -1,5 +1,6 @@
 params {
     publish_dir_mode = "copy"
+    modules_testdata_base_path = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/'
 }
 
 process {
