Add parameter for max number of chromosomes showed

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,8 +23,11 @@ params {
     phase                       = false
     normalize                   = true
     compute_freq                = false
-    rename_chr                  = false
     remove_samples              = null
+
+    // ChrCheck parameters
+    rename_chr                  = false
+    max_chr_names               = 4
 
     // References
     genome                      = null
