--- a/nextflow.config
+++ b/nextflow.config
@@ -216,8 +216,7 @@ profiles {
 includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
 // Load nf-core/phaseimpute custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
-// includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/phaseimpute.config" : "/dev/null"
+includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/phaseimpute.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
@@ -280,7 +279,7 @@ manifest {
     description     = """Phasing and imputation pipeline"""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=24.04.2'
-    version         = '1.0dev'
+    version         = '1.0.0'
     doi             = ''
 }
 
