--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -22,6 +22,7 @@ process {
 
     // Impute quilt
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:QUILT_QUILT' {
+        ext.args = "--seed=${params.seed}"
         ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_${meta.chunk}.impute" }
         publishDir = [enabled: false]
     }
