--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -35,10 +35,10 @@ params {
 
     // Panelprep optional args
     remove_samples = "NA12878,NA12891,NA12892"
-    normalize      = true
-    compute_freq   = true
-    phase          = true
+    normalize      = false
+    compute_freq   = false
+    phase          = false
 
     // Impute tools
-    tools = "glimpse1"
+    tools = "glimpse2"
 }
