--- a/conf/test_full.config
+++ b/conf/test_full.config
@@ -35,7 +35,7 @@ params {
 
     // Panelprep optional args
     remove_samples = "NA12878,NA12891,NA12892"
-    normalize      = false
+    normalize      = true
     compute_freq   = false
     phase          = false
 
