--- a/workflows/chrcheck/tests/nextflow_rename.config
+++ b/workflows/chrcheck/tests/nextflow_rename.config
@@ -1,5 +1,12 @@
+process {
+    resourceLimits = [
+        cpus: 2,
+        memory: '7.GB',
+        time: '1.h'
+    ]
+}
+
 params {
-    max_memory = '7.GB'
     rename_chr = true
     max_chr_names = 4
 }
