--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,9 +97,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install pdiff
 
-      - uses: nf-core/setup-nf-test@v1
-        with:
-          version: ${{ env.NFT_VER }}
+      - name: Install nf-test
+        run: |
+          wget -qO- https://code.askimed.com/install/nf-test | bash -s $NFTEST_VER
+          sudo mv nf-test /usr/local/bin/
 
       - name: "Run pipeline with test data ${{ matrix.NXF_VER }} | ${{ matrix.TEST_PROFILE }} | ${{ matrix.profile }}"
         run: |
