Set params.chunk_model

--- a/conf/test_all.config
+++ b/conf/test_all.config
@@ -33,6 +33,7 @@ params {
     phase        = true
     normalize    = true
     compute_freq = false
+    chunk_model  = "recursive"
 
     // Pipeline steps
     steps = "all"
