--- a/conf/test_dog.config
+++ b/conf/test_dog.config
@@ -32,6 +32,7 @@ params {
     normalize    = false
     compute_freq = false
     rename_chr   = true
+    chunk_model  = "recursive"
 
     // Input data
     input        = params.pipelines_testdata_base_path + "dog_data/csv/sample_dog.csv"
