--- a/conf/test_panelprep.config
+++ b/conf/test_panelprep.config
@@ -32,6 +32,7 @@ params {
     normalize      = true
     compute_freq   = true
     remove_samples = "HG00096,HG00097,HG00099,HG00100"
+    chunk_model    = "recursive"
 
     // Pipeline steps
     steps   = "panelprep"
