--- a/nextflow.config
+++ b/nextflow.config
@@ -10,7 +10,7 @@
 params {
 
     // steps
-    steps                        = null
+    steps                       = null
 
     // Input options
     input                       = null
@@ -24,6 +24,7 @@ params {
     normalize                   = true
     compute_freq                = false
     remove_samples              = null
+    chunk_model                 = 'sequential'
 
     // ChrCheck parameters
     rename_chr                  = false
