Set chunk window size to 4mb

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -41,8 +41,8 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_NORM' {
-        ext.args      = ["-m +any", "--no-version", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix    = { "${meta.id}_${meta.chr}_multiallelic" }
+        ext.args   = ["-m +any", "--no-version", "--output-type z", "--write-index=tbi"].join(' ')
+        ext.prefix = { "${meta.id}_${meta.chr}_multiallelic" }
         publishDir = [ enabled: false ]
     }
 
@@ -62,7 +62,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:VCFLIB_VCFFIXUP' {
-        ext.prefix   = { "${meta.id}_${meta.chr}_fixup" }
+        ext.prefix = { "${meta.id}_${meta.chr}_fixup" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
@@ -72,7 +72,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_NORMALIZE_BCFTOOLS:BCFTOOLS_INDEX' {
-        ext.args     = "--tbi"
+        ext.args   = "--tbi"
         publishDir = [
             path: { "${params.outdir}/prep_panel/panel" },
             mode: params.publish_dir_mode,
@@ -88,6 +88,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_PHASE_SHAPEIT5:GLIMPSE2_CHUNK' {
+        ext.args   = "--window-mb 4"
         ext.prefix = { "${meta.id}_chunks" }
     }
 
@@ -123,7 +124,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SITES_EXTRACT_BCFTOOLS:BCFTOOLS_CONVERT' {
-        ext.args = {"--haplegendsample ${meta.id}_${meta.chr}"}
+        ext.args   = {"--haplegendsample ${meta.id}_${meta.chr}"}
         publishDir = [
             path: { "${params.outdir}/prep_panel/haplegend/" },
             mode: params.publish_dir_mode,
@@ -184,6 +185,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
+        ext.args   = "--window-size 4"
         ext.prefix = { "${meta.id}_${meta.chr}_chunks_glimpse1" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
@@ -194,7 +196,8 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE2_CHUNK' {
-        ext.prefix    = { "${meta.id}_${meta.chr}_chunks_glimpse2" }
+        ext.args   = "--window-mb 4"
+        ext.prefix = { "${meta.id}_${meta.chr}_chunks_glimpse2" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse2/" },
             mode: params.publish_dir_mode,
