Add nf-test for chunk model

--- a/subworkflows/local/vcf_chunk_glimpse/tests/nextflow.config
+++ b/subworkflows/local/vcf_chunk_glimpse/tests/nextflow.config
@@ -1,4 +1,9 @@
 process {
+    resourceLimits = [
+        memory : "2.GB",
+        cpus : 2,
+        time : "1h"
+    ]
     withName: GLIMPSE2_CHUNK {
         ext.args = ["--window-mb 0.01", "--window-cm 0.01", "--window-count 200", "--buffer-mb 0.005", "--buffer-cm 0.005", "--buffer-count 30"].join(' ')
         ext.prefix = { "${meta.id}_${meta.chr}" }
