Check for multiple sample before splitting

--- a/subworkflows/local/vcf_split_bcftools/tests/nextflow.config
+++ b/subworkflows/local/vcf_split_bcftools/tests/nextflow.config
@@ -1,7 +1,14 @@
 process {
+    resourceLimits = [cpus: 2, memory: '2.GB']
+
     withName: BCFTOOLS_MERGE {
         ext.args = ["--write-index=tbi", "--output-type z"].join(' ')
     }
+
+    withName: BCFTOOLS_QUERY {
+        ext.args = "--list-samples"
+    }
+
     withName: BCFTOOLS_PLUGINSPLIT {
         ext.args = ["--write-index=tbi", "--output-type z"].join(' ')
     }
