--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -65,18 +65,22 @@ process {
     }
 
     // Split by samples
-    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:.*' {
-        publishDir = [
-            path: { "${params.outdir}/validation/samples" },
-            mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
-        ]
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_QUERY' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.args = "--list-samples"
+        ext.prefix = { "${meta.id}_${meta.batch}" }
+        publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}" }
         ext.suffix = ".truth"
+        publishDir = [
+            path: { "${params.outdir}/validation/samples" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     // Validation subworkflow
