--- a/conf/modules.config
+++ b/conf/modules.config
@@ -85,6 +85,13 @@ process {
     }
 
     // Split by samples for each tool
+    withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_QUERY' {
+        tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
+        ext.args = "--list-samples"
+        ext.prefix = { "${meta.id}_${meta.batch}" }
+        publishDir = [enabled: false]
+    }
+
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
