Fix window size

--- a/conf/steps/panel_prep.config
+++ b/conf/steps/panel_prep.config
@@ -185,7 +185,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CHUNK_GLIMPSE:GLIMPSE_CHUNK' {
-        ext.args   = "--window-size 4"
+        ext.args   = "--window-size 4000000"
         ext.prefix = { "${meta.id}_${meta.chr}_chunks_glimpse1" }
         publishDir = [
             path: { "${params.outdir}/prep_panel/chunks/glimpse1/" },
