Fix name output suffix

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,11 +31,11 @@ process {
     // Simulation
     // Coverage process
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_INP' {
-        ext.prefix = { "${meta.id}.A-truth" }
+        ext.prefix = { "${meta.id}.truth" }
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_DWN' {
-        ext.prefix = { "${meta.id}.B-sim" }
+        ext.prefix = { "${meta.id}.sim" }
         publishDir = [ enabled: false ]
     }
 
