--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -52,7 +52,7 @@ process {
 
     // Concatenate the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
-        ext.prefix = { "${meta.id}.A-truth" }
+        ext.prefix = { "${meta.id}.truth" }
         publishDir = [
             path: { "${params.outdir}/validation/concat" },
             mode: params.publish_dir_mode,
