--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,11 +31,13 @@ process {
     // Simulation
     // Coverage process
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_INP' {
+        cache = "lenient"
         ext.prefix = { "${meta.id}.truth" }
         publishDir = [ enabled: false ]
     }
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SAMTOOLS_COVERAGE_DWN' {
-        ext.prefix = { "${meta.id}.sim" }
+        cache = "lenient"
+        ext.prefix = { "${meta.id}" }
         publishDir = [ enabled: false ]
     }
 
@@ -75,7 +77,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:LIST_TO_FILE' {
         tag = { "${meta.id}" }
-        ext.prefix = { "${meta.id}.${meta.batch}" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}" }
         publishDir = [
             path: { "${params.outdir}/imputation/batch" },
             mode: params.publish_dir_mode,
@@ -88,16 +90,17 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_QUERY' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args = "--list-samples"
-        ext.prefix = { "${meta.id}_${meta.batch}" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.tools}" }
         publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_SPLIT_BCFTOOLS:BCFTOOLS_PLUGINSPLIT' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_${meta.batch}" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.tools}" }
+        ext.suffix = { ".batch${meta.batch}.${meta.tools}" }
         publishDir = [
-            path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
+            path: { "${params.outdir}/imputation/${meta.tools}/" },
             mode: params.publish_dir_mode,
             enabled: true,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
