--- a/conf/steps/imputation_glimpse2.config
+++ b/conf/steps/imputation_glimpse2.config
@@ -18,7 +18,8 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE2:GLIMPSE2_PHASE' {
-        ext.prefix   = { "${meta.id}_batch${meta.batch}_${meta.chunk.replace(':','_')}_glimpse2" }
+        cache = "lenient"
+        ext.prefix   = { "${meta.id}.batch${meta.batch}.${meta.chunk.replace(':','_')}.glimpse2" }
         ext.args     = { "--keep-monomorphic-ref-sites" }
         ext.suffix   = "bcf"
         publishDir   = [ enabled: false ]
@@ -30,7 +31,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_GLIMPSE2:GLIMPSE2_LIGATE' {
-        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_ligate" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chr}.ligate" }
         publishDir = [ enabled: false ]
     }
 
@@ -43,7 +44,7 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE2:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse2/concat" },
+            path: { "${params.outdir}/imputation/glimpse2" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -51,6 +52,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE2:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_batch${meta.batch}.glimpse2" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.glimpse2" }
     }
 }
