--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -23,21 +23,21 @@ process {
     // Impute quilt
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:QUILT_QUILT' {
         ext.args = "--seed=${params.seed}"
-        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_${meta.chunk}.impute" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chunk.replace(':','_')}.quilt" }
         publishDir = [enabled: false]
     }
 
     // Annotate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_QUILT:BCFTOOLS_ANNOTATE' {
         ext.args     = ["--set-id '%CHROM:%POS:%REF:%ALT'", "-Oz", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_${meta.chunk}.impute.annotate" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chunk.replace(':','_')}.quilt.annotate" }
         publishDir = [ enabled: false ]
     }
 
     // Concatenate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/quilt/concat" },
+            path: { "${params.outdir}/imputation/quilt" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -45,6 +45,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:BCFTOOLS_CONCAT' {
         ext.args = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_batch${meta.batch}.quilt" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.quilt" }
     }
 }
