--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -18,14 +18,15 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:GAWK' {
         ext.args2  = "'BEGIN { OFS=\"\\t\" } NR>1  { split(\$1, a, \"[:-_]\"); print a[1], \$2, \$3, \$4 }'" // Remove duplicates
-        ext.prefix = { "${meta.id}_batch${meta.batch}_${meta.chr}_posfile_stitch" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chr}.posfile.stitch" }
         ext.suffix = "txt"
         publishDir = [enabled: false]
         tag = {"${meta.id} ${meta.chr}"}
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:STITCH' {
-        ext.prefix = { "${meta.id}_batch${meta.batch}.stitch" }
+        cache = "lenient"
+        ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.chr}.stitch" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_IMPUTE_STITCH:BCFTOOLS_INDEX' {
@@ -36,7 +37,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
         publishDir = [enabled:false]
         publishDir = [
-            path: { "${params.outdir}/imputation/stitch/concat" },
+            path: { "${params.outdir}/imputation/stitch" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -44,6 +45,6 @@ process {
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:BCFTOOLS_CONCAT' {
         ext.args   = ["--ligate", "--output-type z", "--write-index=tbi"].join(' ')
-        ext.prefix = { "${meta.id}_batch${meta.batch}.stitch" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.stitch" }
     }
 }
