--- a/conf/steps/simulation.config
+++ b/conf/steps/simulation.config
@@ -22,6 +22,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_REGION_SAMTOOLS:SAMTOOLS_MERGE' {
+        cache = "lenient"
         ext.prefix = { "${meta.id}" }
         tag = {"${meta.id} ${meta.chr}"}
     }
@@ -48,8 +49,9 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:BAM_DOWNSAMPLE_SAMTOOLS:SAMTOOLS_VIEW' {
+        cache = "lenient"
         ext.args   = ["--output-fmt bam", "--write-index"].join(' ')
-        ext.prefix = { "${meta.id}_depth_${meta.depth}x" }
+        ext.prefix = { "${meta.id}.depth_${meta.depth}x" }
         publishDir = [
             path: { "${params.outdir}/simulation/" },
             mode: params.publish_dir_mode,
