--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -26,6 +26,7 @@ process {
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MPILEUP' {
+        cache = "lenient"
         ext.args = [
             "-I",
             "-E",
@@ -35,10 +36,11 @@ process {
             "-Aim",
             "-C alleles"
         ].join(' ')
-        ext.prefix = { "${meta.id}_truth.call" }
+        ext.prefix = { "${meta.id}.truth.call" }
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:GL_TRUTH:BCFTOOLS_MERGE' {
+        cache = "lenient"
         ext.args = [
             "--write-index=tbi",
         ].join(' ')
@@ -52,9 +54,9 @@ process {
 
     // Concatenate the truth set
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
-        ext.prefix = { "${meta.id}.truth" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}.truth" }
         publishDir = [
-            path: { "${params.outdir}/validation/concat" },
+            path: { "${params.outdir}/validation/samples" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
@@ -68,14 +70,14 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_QUERY' {
         tag = { "${meta.id} Batch ${meta.batch} ${meta.tools}" }
         ext.args = "--list-samples"
-        ext.prefix = { "${meta.id}_${meta.batch}" }
+        ext.prefix = { "${meta.id}.batch${meta.batch}" }
         publishDir = [enabled: false]
     }
 
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}" }
-        ext.suffix = ".truth"
+        ext.suffix = { ".batch${meta.batch}.truth" }
         publishDir = [
             path: { "${params.outdir}/validation/samples" },
             mode: params.publish_dir_mode,
@@ -86,7 +88,7 @@ process {
     // Validation subworkflow
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:VCF_CONCORDANCE_GLIMPSE2:.*' {
         publishDir = [
-            path: { "${params.outdir}/validation/" },
+            path: { "${params.outdir}/validation/stats" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
