--- a/conf/modules.config
+++ b/conf/modules.config
@@ -100,10 +100,13 @@ process {
         ext.prefix = { "${meta.id}.batch${meta.batch}.${meta.tools}" }
         ext.suffix = { ".batch${meta.batch}.${meta.tools}" }
         publishDir = [
-            path: { "${params.outdir}/imputation/${meta.tools}/" },
+            path: { "${params.outdir}/imputation/${meta.tools}/samples/" },
             mode: params.publish_dir_mode,
             enabled: true,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filepath ->
+                def filename = filepath.tokenize('/')[-1]
+                filename.equals('versions.yml') ? null : filename
+            }
         ]
     }
 
