--- a/conf/steps/imputation_glimpse1.config
+++ b/conf/steps/imputation_glimpse1.config
@@ -83,7 +83,7 @@ process {
     // Concatenate the imputed chunks
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_GLIMPSE1:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/glimpse1" },
+            path: { "${params.outdir}/imputation/glimpse1/concat" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
