--- a/conf/steps/imputation_quilt.config
+++ b/conf/steps/imputation_quilt.config
@@ -37,7 +37,7 @@ process {
     // Concatenate quilt imputed VCFs
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_QUILT:.*' {
         publishDir = [
-            path: { "${params.outdir}/imputation/quilt" },
+            path: { "${params.outdir}/imputation/quilt/concat" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
