--- a/conf/steps/imputation_stitch.config
+++ b/conf/steps/imputation_stitch.config
@@ -37,7 +37,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_STITCH:.*' {
         publishDir = [enabled:false]
         publishDir = [
-            path: { "${params.outdir}/imputation/stitch" },
+            path: { "${params.outdir}/imputation/stitch/concat" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
