--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -56,7 +56,7 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:CONCAT_TRUTH:.*' {
         ext.prefix = { "${meta.id}.batch${meta.batch}.truth" }
         publishDir = [
-            path: { "${params.outdir}/validation/samples" },
+            path: { "${params.outdir}/validation/concat" },
             mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
