--- a/conf/steps/validation.config
+++ b/conf/steps/validation.config
@@ -77,11 +77,14 @@ process {
     withName: 'NFCORE_PHASEIMPUTE:PHASEIMPUTE:SPLIT_TRUTH:BCFTOOLS_PLUGINSPLIT' {
         ext.args   = ["--output-type z", "--write-index=tbi"].join(' ')
         ext.prefix = { "${meta.id}" }
-        ext.suffix = { ".batch${meta.batch}.truth" }
+        ext.suffix = { ".truth" }
         publishDir = [
             path: { "${params.outdir}/validation/samples" },
             mode: params.publish_dir_mode,
-            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+            saveAs: { filepath ->
+                def filename = filepath.tokenize('/')[-1]
+                filename.equals('versions.yml') ? null : filename
+            }
         ]
     }
 
